plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.scoup'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// JPA & Database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Validations
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Health Check
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// JWT
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

	//
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'

	// Http
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.79.Final:osx-aarch_64'

	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j:8.0.31'

}

tasks.named('test') {
	useJUnitPlatform()
}
